# linear_regressor

./: README.md  meson.build
examples/: lab1.cpp  lab1_data.csv  version.cpp
include/: solution.hpp  version.hpp.in
tests/: version.test.cpp
